# vectrap

./: .gitignore  CONTEXT.md  INFO.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
db/: build_db.py
tests/: test_build_db.py  test_scanner.py  test_utils.py
vectrap/catalogs/: README.md
vectrap/cli/: build_db.py  run.py
vectrap/docs/: peptide_tag_references.txt
vectrap/modules/: homology_scanner.py  mcs_module.py  origin_scanner_module.py  peptide_tag_module.py  regulatory_scanner_module.py  reporter.py  scorer.py  tactrc_module.py  utils.py
